Perkin-UAT/force-app/main/default/objects/Rules_Execution__c/Rules_Execution__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings to Manage the Execution of Validation and Workflow Rules.</description>
    <label>Rules Execution</label>
</CustomObject>