Perkin-UAT/force-app/main/default/objects/Rules_Execution__c/fields/Account_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Address__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If TRUE, used to run validation rules on Account&#39;s Billing Address.</description>
    <label>Account Billing Address</label>
    <type>Checkbox</type>
</CustomField>