Perkin-UAT/force-app/main/default/objects/Rules_Execution__c/fields/Case_Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Case_Validation_Rules__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Case Validation Rules</label>
    <type>Checkbox</type>
</CustomField>