Perkin-UAT/force-app/main/default/objects/Rules_Execution__c/fields/Run__c.field-meta.xml
<CustomField>
    <fullName>Run__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Use in Validation or workflow rules to control whether the rule executes. Default value is TRUE; rule are executed.</inlineHelpText>
    <label>Run</label>
    <type>Checkbox</type>
</CustomField>