Perkin-UAT/force-app/main/default/objects/Rules_Execution__c/listViews/All_Exceptions.listView-meta.xml
<ListView>
    <fullName>All_Exceptions</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>SETUP_TYPE</columns>
    <columns>Run__c</columns>
    <columns>Account_Billing_Address__c</columns>
    <columns>Case_Validation_Rules__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Exceptions</label>
    <language>en_US</language>
</ListView>